--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
+/img/characters/Character02/Fly
+/img/characters/Character02/Roll
+/img/characters/Character02/Hit
+/img/enemys/Monster01/Idle
+/img/enemys/Monster1/Jump
 /img/enemys/Boss/Jump
